--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # URL
+  googlescholar    : "https://scholar.google.com/citations?user=LyAreZsAAAAJ&hl=pt-BR"
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-8628-1653"
   semantic         : # URL
